objects/Targets__c.object
<CustomObject>
    <description>For tracking Targets and Actuals for Travel Agencies and Corporate Accounts</description>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Target__c</fullName>
        <label>Base Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Day__c</fullName>
        <formula>IF( MONTH( Date__c ) = MONTH( TODAY() ) &amp;&amp; YEAR( Date__c ) = YEAR( TODAY() ) , DAY(TODAY()), Days_in_Month__c)</formula>
        <label>Current Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <formula>Actual__c  / IF( MONTH( Date__c ) = MONTH( TODAY() ) &amp;&amp; YEAR( Date__c ) = YEAR( TODAY() ) , DAY(TODAY()), Days_in_Month__c)</formula>
        <label>Current Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Month__c</fullName>
        <label>Days in Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Poduct</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prorated_Actual__c</fullName>
        <formula>Current_Rate__c *  Days_in_Month__c</formula>
        <label>Prorated Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_Rate__c</fullName>
        <formula>Base_Target__c / Days_in_Month__c</formula>
        <label>Required Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stretch_Target__c</fullName>
        <label>Stretch Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_on_Stretched_Target__c</fullName>
        <formula>IF(
    Base_Target__c != 0,
    (( Prorated_Actual__c - Stretch_Target__c ) / Stretch_Target__c ),
    Base_Target__c 
)</formula>
        <label>Variance on Stretched Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_on_Target__c</fullName>
        <formula>IF(
    Base_Target__c != 0,
    (( Prorated_Actual__c - Base_Target__c ) / Base_Target__c),
    Base_Target__c 
)</formula>
        <label>Variance on Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>